tests/parser/invalid/006-if-with-two-conditions.man
def main()
    if foo() bar()
        baz()
    end
end
